# Keela

./: .clang-format  .git-blame-ignore-revs  .gitignore  .gitmodules  CMakeLists.txt  README.md  premake5.lua
.github/actions/install-deps/: action.yml
.github/workflows/: cmake-multi-platform.yml
Keela/: Keela.vcxproj
Keela/src/Keela/Cameras/: BaslerCam.cpp  BaslerCam.h
Keela/src/Keela/ImGui/: CameraWindow.cpp  ControlWindow.cpp
KitchenSink/: imgui.ini
KitchenSink/src/: KitchenSinkApp.cpp
keela-exe/: CMakeLists.txt  cameracontrolwindow.cpp  cameracontrolwindow.h  cameramanager.cpp  cameramanager.h  main.cpp  mainwindow.cpp  mainwindow.h  tracewindow.cpp  tracewindow.h
keela-pipeline/: CMakeLists.txt  CameraStreamBin.cpp  EjectableElement.cpp  TraceBin.cpp  TransformBin.cpp  bin.cpp  caps.cpp  commonbin.cpp  element.cpp  elementbase.cpp  gst-helpers.cpp  gtkglsink.cpp  gtksink.cpp  presentationbin.cpp  queuebin.cpp  recordbin.cpp  simpleelement.cpp  snapshotbin.cpp  testsrc.cpp  transformbin.cpp  utils.cpp
keela-pipeline/keela-pipeline/: CameraStreamBin.h  EjectableElement.h  TraceBin.h  TransformBin.h  autovideosink.h  bin.h  caps.h  commonbin.h  consts.h  element.h  elementbase.h  gst-helpers.h  gtkglsink.h  gtksink.h  presentationbin.h  queuebin.h  recordbin.h  simpleelement.h  snapshotbin.h  testsrc.h  transformbin.h  utils.h  widgetelement.h
keela-test/: CMakeLists.txt  gdk.cpp  keela-exe.cpp  main.cpp  pipeline.cpp  reference.cpp  widgets.cpp
keela-videotestsrc/: CMakeLists.txt  README.md  gstkeelacustomplugin.c  gstkeelavideotestsrc.c  gstkeelavideotestsrc.h
keela-widgets/: .gitignore  AravisController.cpp  CMakeLists.txt  GLCameraRender.cpp  GLTraceRender.cpp  cameramanager.cpp  cameratrace.cpp  framebox.cpp  gizmocontrol.cpp  labeledcomboboxtext.cpp  labeledspinbutton.cpp  plugin_init.cpp  plugin_init.h  plugin_utils.cpp  shader-resources.xml  tracegizmo.cpp  videopresentation.cpp
keela-widgets/keela-widgets/: AravisController.h  GLCameraRender.h  GLTraceRender.h  cameramanager.h  cameratrace.h  framebox.h  gizmocontrol.h  labeledcomboboxtext.h  labeledspinbutton.h  plugin_utils.h  shader-resources.h  tracegizmo.h  videopresentation.h
keela-widgets/shaders/: hello-triangle-fragment.glsl  hello-triangle-vertex.glsl  trace-fragment.glsl  trace-vertex.glsl  video-fragment.glsl  video-vertex.glsl
reference/: CMakeLists.txt  gst-tutorial-5.c  gst_jpg_on_demand.cpp  pad-probe-dynamicpipeline.c  setterminate.cpp
